--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -4,9 +4,21 @@
     font-size: 1.4rem;
     color: $color-grey-light;
 
+    @include respond(tab-port) {
+        padding: 8rem 0;
+    }
+
+    @include respond(phone) {
+        padding-top: 5rem;
+    }
+
     &__logo-box {
         text-align: center;
         margin-bottom: 8rem;
+
+        @include respond(phone) {
+            margin-bottom: 4rem;
+        }
     }
 
     &__logo {
@@ -18,6 +30,11 @@
         border-top: 1px solid $color-grey-dark-2;
         padding-top: 2rem;
         display: inline-block;
+
+        @include respond(tab-port) {
+            width: 100%;
+            text-align: center;
+        }
     }
 
     &__list {
@@ -57,5 +74,10 @@
         width: 80%;
         float: right;
         color: $color-grey-light;
+
+        @include respond(tab-port) {
+            width: 100%;
+            float: none;
+        }
     }
 }
