--- a/sass/components/_card.scss
+++ b/sass/components/_card.scss
@@ -144,4 +144,71 @@
           font-weight: bolder;
         }
     }
+
+
+    @include respond(tab-port) {
+        height: auto;
+        border-radius: .5rem;
+        background-color: $color-white;
+        box-shadow: 0 1rem 2rem rgba($color-black, .15);
+
+        
+        &__details {
+            padding-bottom: 5rem;
+        }
+
+
+        &__side {
+            height: auto;
+            position: relative; 
+    
+            &--front {
+                background-color: $color-white;
+            }
+            &--back {
+                background-color: $color-quartary;
+                transform: rotateY(0);
+                clip-path: polygon(0 18%, 100% 0, 100% 100%, 0 100%);
+               
+                &--1 {
+                    background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark, 25%);
+                }
+    
+                &--2 {
+                    background-image: linear-gradient(to right bottom, $color-tertiary, darken($color-tertiary, 25%));
+                }
+    
+                &--3 {
+                    background-image: linear-gradient(to right bottom, $color-quartary, darken($color-quartary, 25%));
+                }
+            }
+        }
+    
+        &:hover &__side--front {
+            transform: rotateY(0);
+        }
+    
+        &__cta {
+            position: relative;
+            transform: translate(-50%, 13%);
+            width: 100%;
+            padding: 7rem 4rem 10rem 4rem;
+            margin-top: -4rem;
+   
+            p {
+                color: $color-white;
+                display: none;
+            }
+    
+            a {
+              font-size: 1.5rem;
+              font-weight: bolder;
+            //   position: absolute;
+            //   top: 50%;
+            //   left: 50%;
+            //   transform: translate(-50%, -50%);
+            }
+        }
+          
+    }
 }
