Add breakpoint for tablet and phone

--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -5,7 +5,15 @@
     
     &:not(:last-child) {
         margin-bottom: $gutter-vertical;
+
+        @include respond(phone) {
+           margin-bottom: $gutter-vertical-sm;
+        }
     }
+
+    @include respond(phone) {
+        max-width: 50rem;
+     }
 
     @include clearfix;
 
@@ -14,6 +22,15 @@
 
         &:not(:last-child) {
             margin-right: $gutter-horizontal;
+
+            @include respond(phone) {
+                margin-right: 0;
+                margin-bottom: $gutter-vertical-sm;
+            }
+        }
+
+        @include respond(phone) {
+            width: 100% !important;
         }
     }
 
