--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -10,6 +10,11 @@
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 75vh, 0% 100%);
     clip-path: polygon(0 0, 100% 0, 100% 75vh, 0% 100%);
 
+    @include respond(phone) {
+        -webkit-clip-path: polygon(0 0, 100% 0, 100% 82vh, 0% 100%);
+        clip-path: polygon(0 0, 100% 0, 100% 82vh, 0% 100%);
+    }
+
     &__text {
         position: absolute; 
         top: 40%;
