--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -16,6 +16,10 @@
         display: block;
         transition: all .2s;
 
+        @include respond(tab-port) {
+            width: 100%;
+        }
+
         &:focus {
             outline: none; 
             box-shadow: 0 1rem 2rem rgba($color: $color-black, $alpha: .1);
@@ -52,6 +56,11 @@
         float: left;
         margin-right: 2rem;
         @include clearfix;
+
+        @include respond(tab-port) {
+            width: 100%;
+            margin-bottom: 2rem;
+        }
     }
 
     &__radio-input {
