--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -41,12 +41,21 @@
         opacity: 0;
         transform: translate(-50%, -50%) scale(0);
         transition: all .4s .2s;
+
+        @include respond(tab-land) {
+            width: 80%;
+            transform: translate(-57%, -50%) scale(1);
+        }
     }
 
 
     &__left {
         width: 33.3333333%;
         display: table-cell;
+
+        @include respond(tab-port) {
+           display: none;
+        }
     }
 
     &__right {
@@ -59,6 +68,8 @@
     &__img {
         display: block;
         width: 100%;
+
+       
     }
 
     &__text {
