Add breakpoint for small phones

--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -30,6 +30,9 @@
 
 */
 @mixin respond($breakpoint) {
+    @if $breakpoint == phone-small {
+        @media (max-width: 25em) { @content }; // 400px
+    }
     @if $breakpoint == phone {
         @media (max-width: 37.5em) { @content }; // 600px
     }
