Style the paragraph and h3 in about section for small phones

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -56,3 +56,12 @@ p {
         margin-bottom: 3rem;
     }
 }
+
+.section-about p {
+    padding: 1rem;
+}
+
+.section-about h3 {
+    text-align: center;
+}
+
