Style the composition images for small phones

--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -1,5 +1,6 @@
 .composition {
     position: relative;
+
     &__photo {
         width: 55%; 
         box-shadow: 0 1.5rem 4rem rgba($color-black, .4);
@@ -23,7 +24,13 @@
             @include respond(tab-port) {
                 top: 0;
                 transform: scale(1.2);
-            }            
+            }   
+            
+            @include respond(phone-small) {
+                top: 0;
+                left: 2.3rem;
+                transform: scale(1.2);
+            }
         }
 
         &--p2 {
@@ -46,6 +53,13 @@
                 left: 0;
                 transform: scale(1.2);
             } 
+
+            @include respond(phone-small) {
+                top: 0;
+                left: -2.3rem;
+                transform: scale(1.2);
+            }
+
         }
 
         &:hover {
