--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -29,7 +29,7 @@
             @include respond(phone-small) {
                 top: 0;
                 left: 2.3rem;
-                transform: scale(1.2);
+                transform: scale(1.1);
             }
         }
 
@@ -42,6 +42,12 @@
                 transform: scale(1.3);
                 z-index: 10;
             } 
+
+            @include respond(phone-small) {
+                top: 0;
+                left: -2.3rem;
+                transform: scale(1.2);
+            }
         }
 
         &--p3 {
@@ -57,7 +63,7 @@
             @include respond(phone-small) {
                 top: 0;
                 left: -2.3rem;
-                transform: scale(1.2);
+                transform: scale(1.1);
             }
 
         }
