--- a/sass/components/_popup.scss
+++ b/sass/components/_popup.scss
@@ -11,6 +11,12 @@
     visibility: hidden;
     transition: all .5s;
 
+    @supports (-webkit-backdrop-filter: blur(10px)) or (backdrop-filter: blur(10px)) {
+        -webkit-backdrop-filter: blur(10px);
+        backdrop-filter: blur(10px);
+        background-color: rga($color-black, .3);
+    }
+
     &__close {
         &:link, 
         &:visited {
