Add overflow hidden as temp solution for pictures on tab-land breakpoint

--- a/sass/components/_composition.scss
+++ b/sass/components/_composition.scss
@@ -1,5 +1,13 @@
+.section-about {
+    overflow: hidden;
+}
+
 .composition {
     position: relative;
+
+    @include respond(tab-land) {
+        
+    }
 
     &__photo {
         width: 55%; 
